// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/NavLink Active Inverted Nav Link 1`] = `
<div
  className="css-1agdl1f"
>
  <a
    className="chakra-link css-1v136sv"
    rel="noopener noreferrer"
  >
    Example link
  </a>
</div>
`;

exports[`Storyshots Common/NavLink Active Nav Link 1`] = `
<a
  className="chakra-link css-1q4kjoy"
  rel="noopener noreferrer"
>
  Example link
</a>
`;

exports[`Storyshots Common/NavLink Inactive Inverted Nav Link 1`] = `
<div
  className="css-1agdl1f"
>
  <a
    className="chakra-link css-1e3hkmh"
    rel="noopener noreferrer"
  >
    Example link
  </a>
</div>
`;

exports[`Storyshots Common/NavLink Inactive Nav Link 1`] = `
<a
  className="chakra-link css-f6i9u1"
  rel="noopener noreferrer"
>
  Example link
</a>
`;

exports[`Storyshots Common/NavLink NavLink 1`] = `
<div
  className="chakra-stack css-owjkmg"
>
  <div
    className="chakra-stack css-15sc1x5"
  >
    <a
      className="chakra-link css-f6i9u1"
      rel="noopener noreferrer"
    >
      Not active
    </a>
    <a
      className="chakra-link css-1q4kjoy"
      rel="noopener noreferrer"
    >
      Very active
    </a>
  </div>
  <div
    className="chakra-stack css-1d41i6c"
  >
    <a
      className="chakra-link css-1e3hkmh"
      rel="noopener noreferrer"
    >
      Not active
    </a>
    <a
      className="chakra-link css-1v136sv"
      rel="noopener noreferrer"
    >
      Very active
    </a>
  </div>
</div>
`;
